src/test/deca/context/invalid/compBool.deca
//ERROR :3:
{
    if (true>false) {
    }
}